<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CalendarActivity">

    <Button
        android:id="@+id/btnSetUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnSetUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCalendar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnToDay"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnToDay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnToDay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCalendar"
        app:layout_constraintStart_toEndOf="@id/btnHome"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnCalendar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnCalendar"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSetUp"
        app:layout_constraintStart_toEndOf="@id/btnToDay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <CalendarView
        android:id="@+id/Viewcalendar"
        android:layout_width="386dp"
        android:layout_height="315dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/mainTextTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        app:layout_constraintBottom_toTopOf="@+id/btnToDay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Viewcalendar"
        app:layout_constraintVertical_bias="0.169">

        <TableRow
            android:id="@+id/calTable_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dispWorkingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/dispStartTime" />

            <TextView
                android:id="@+id/startTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/calTable_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dispScheduledWorkingHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/dispEndTime" />

            <TextView
                android:id="@+id/endTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/calTable_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dispWorkTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/dispWorkTime" />

            <TextView
                android:id="@+id/workTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/dispOverTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dispOverTime" />

            <TextView
                android:id="@+id/overTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end" />
        </TableRow>

        <TableRow
            android:id="@+id/calTable_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dispWorkTimeHoliday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/dispWorkTimeHoliday" />

            <TextView
                android:id="@+id/workTimeHolidayValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/calTable_5"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dispWorkTimeMidnight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/dispWorkTimeMidnight" />

            <TextView
                android:id="@+id/workTimeMidnightValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/calTable_6"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dispWorkTimeTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/dispWorkTimeTotal" />

            <TextView
                android:id="@+id/workTimeTotalValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/calTable_7"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dispWorkTimePayoff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/dispWorkTimePayoff" />

            <TextView
                android:id="@+id/workTimePayoffValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
