<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <Button
        android:id="@+id/btnSetUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnSetUp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCalendar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnHome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnToDay"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnToDay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnToDay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnCalendar"
        app:layout_constraintStart_toEndOf="@id/btnHome"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btnCalendar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btnCalendar"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSetUp"
        app:layout_constraintStart_toEndOf="@id/btnToDay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/txtDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TableLayout
        android:id="@+id/mainTextTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="32dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        app:layout_constraintBottom_toTopOf="@+id/btnToDay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:id="@+id/calTable_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dispWorkingTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/dispStartTime" />

            <TextView
                android:id="@+id/startTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/calTable_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dispScheduledWorkingHours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/dispEndTime" />

            <TextView
                android:id="@+id/endTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:id="@+id/calTable_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dispWorkTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/dispWorkTime" />

            <TextView
                android:id="@+id/workTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/dispOverTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dispOverTime" />

            <TextView
                android:id="@+id/overTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end" />
        </TableRow>

        <TableRow
            android:id="@+id/calTable_4"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dispWorkTimeHoliday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/dispWorkTimeHoliday" />

            <TextView
                android:id="@+id/workTimeHolidayValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="140dp"
        android:layout_height="18dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="32dp"
        android:layout_weight="4"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/startTimeTodayLinear"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkResiduePaidHolidays" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="12dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkCompensatoryDayOff" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/startTimeTodayLinear"
        android:layout_width="100dp"
        android:layout_height="38dp"
        android:layout_marginStart="56dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/mainTextTable"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/view_frame">

        <TextView
            android:id="@+id/dispStartTimeToday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/view_frameandbackground"
            android:text="@string/dispStartTimeToday"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/valueStartTimeToday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/view_frame"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/endTimeTodayLinear"
        android:layout_width="100dp"
        android:layout_height="38dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        android:background="@drawable/view_frame"
        app:layout_constraintBottom_toTopOf="@+id/mainTextTable"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/dispEneTimeToday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dispEndTimeToday"
            android:background="@drawable/view_frameandbackground"
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/valueEndTimeToday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/view_frame"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="315dp"
        android:layout_height="18dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/view_frame"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/dispUserNameToday"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/view_frameandbackground"
            android:text="@string/dispUserName"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/valueUserNameToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@drawable/view_frame"
            tools:layout_editor_absoluteX="164dp"
            tools:layout_editor_absoluteY="309dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>